# rusty-elm

./: .env  .gitignore  README.md  azure-pipelines.yml  bsconfig.json  elm.json  package-lock.json  package.json  webpack.config.js
.circleci/: config.yml
crate/: Cargo.toml
crate/src/: lib.rs  utils.rs
elm/: Main.elm
js/: bootstrap.js  index.js
reason/: Elm.bs.js  Elm.re  Hello.bs.js  Hello.re  Index.bs.js  Index.re  Psd.bs.js  Psd.re  Render.bs.js  Render.re
server/: Cargo.toml  Dockerfile  buildAndPushDocker.sh  buildDocker.sh
server/migrations/2019-04-28-135712_create_documents/: up.sql
server/src/: main.rs  models.rs  schema.rs
server/src/api/: mod.rs
static/: index.html
