[package]
authors = ["Mason Stallmo <masonstallmo@gmial.com>"]
categories = ["wasm"]
description = "Test Module for WASM"
license = "Apache-2.0/MIT"
name = "rusty-elm"
readme = "./README.md"
repository = "https://github.com/rustwasm/rust-webpack-template"
version = "0.0.1"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
psd = "0.1.4"
console_error_panic_hook = { version = "0.1.5", optional = true }
wee_alloc = { version = "0.4.2", optional = true }

[dependencies.web-sys]
version = "0.3"
features = ["ImageData"]

[features]
default = ["console_error_panic_hook"]
