[package]
name = "server"
version = "0.0.1"
authors = ["Mason Stallmo <masonstallmo@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "1.0.0-alpha.4"
actix-files = "0.1.0-betsa.1"
env_logger = "0.6.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "1.4", features = ["postgres", "r2d2"]}
dotenv = "0.13"
futures = "0.1"
